<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        tools:context=".MainActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/person_box_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textNameBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_menu"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textName"
            app:startIconDrawable="@drawable/email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEmailBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_menu"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textEmail"
            app:startIconDrawable="@drawable/calendar_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDateBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_menu"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/receiveE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiveE_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDate" />

        <CheckBox
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receiveE" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agree" />

        <TextView
            android:id="@+id/resText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5sp"
            android:text="@string/placeHolderMainAct"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sendBut" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearText"
            app:layout_constraintBaseline_toBaselineOf="@id/sendBut"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableEnd="@android:drawable/ic_menu_close_clear_cancel"
            android:drawableTint="@color/red_200"
            android:backgroundTint="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>